[package]
name = "dgraph-admin"
version = "0.0.0"
authors = ["blukai"]
edition = "2018"

[dependencies]
argh = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.1", default-features = false, features = ["json", "tls"] }
anyhow = "1.0"
url = "2.2"
humantime = "2.1"
